# bb-bot

./: .gitignore  Cargo.toml  build.rs  diagram.json  espflash.toml  partitions.csv  rust-toolchain.toml  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
.gitea/workflows/: bloat.yml  release-packaging.yaml
.github/workflows/: bloat.yml  check-and-lint-no-toolchain.yaml  check-and-lint.yaml  ci_cargo.yml  release-packaging.yaml  test.yaml
src/: config.rs  error.rs  main.rs  wifi.rs
