[package]
name = "bbbot"
version = "0.1.0"
authors = ["izzy"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "bbbot"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
debug = false
opt-level = "s"
strip = true
panic = "abort"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
lot = "off"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
  "esp-idf-svc/embassy-sync",
  "esp-idf-svc/critical-section",
  "esp-idf-svc/embassy-time-driver",
]

[dependencies]
panic-halt = "0"
heapless = "0.8.0"
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
esp-println = { version = "0.3.1", features = ["esp32s3"] }
anyhow = "1.0.86"
esp-idf-hal = "0.44.1"
lazy_static = "1.4.0"
parking_lot = "0.12"
tokio = { version = "1", features = [
  "rt",
  "net",
  "io-util",
  "macros",
  "sync",
  "time",
] }
embedded-svc = "0.28.0"

[build-dependencies]

embuild = "0.32.0"
dotenvy = "0.15.7"
paste = "1.0"
quote = "1.0"

[package.metadata.espflash]
partition_table = "./partitions.csv"
